Completed html-skeleton-exercise

--- a/html-skeleton/index.html
+++ b/html-skeleton/index.html
@@ -3,5 +3,5 @@
     <head>
       <title>HTML Skeletons</title>
     </head>
-    <body>Hello HTML!</body>
+    <body><h1>Hello HTML!</h1> </body>
   </html>
