--- a/html-block-and-inline/index.html
+++ b/html-block-and-inline/index.html
@@ -10,9 +10,9 @@
 
   <p>Price: <del>$19.99</del> $14.99</p>
 
-  <p>Part of our new Americana collection, this <i>beautiful</i> blue is already a customer favorite!</p>
+  <p>Part of our new Americana collection, this <em>beautiful</em> blue is already a customer favorite!</p>
 
-  <p>Enjoy complete <b>Freedom of Movement!</b></p>
+  <p>Enjoy complete <strong>Freedom of Movement!</strong></p>
 
   <p>Does not slip and slide like regular blanket and keeps you warm from head to toe.</p>
 </body>
