Removed text content for text area element.  Added attribute placeholder with the value assigned as the previous text content to the textarea element

--- a/html-forms/index.html
+++ b/html-forms/index.html
@@ -36,7 +36,7 @@
       </div>
 
       <div><label for="comments">Comments</label></div>
-      <div><textarea id="comments" name="comments" style="width: 250px; height: 150px;">Enter feedback comments here</textarea></div>
+      <div><textarea id="comments" name="comments" style="width: 250px; height: 150px;" placeholder="Enter feedback comments here"></textarea></div>
       <div><label for="submit"></label></div>
       <div><input id="submit" type="submit" value="Submit" /></div>
 
