--- a/css-brochure-form/index.html
+++ b/css-brochure-form/index.html
@@ -11,5 +11,27 @@
 </head>
 <body>
 
+  <form action="/css-brochure-form/index.html" method="get">
+    <h1>Learn More</h1>
+    <div><label for="company-email">Company Email</label></div>
+    <div><input id="company-email" type="email" name="email" placeholder="sally@company.co" /></div>
+
+    <div><label for="name">Name</label></div>
+    <div><input id="name" type="text" name="name" placeholder="Sally Smith" /></div>
+
+    <div><label for="hiring-locations">Where are you hiring</label></div>
+    <div><input id="hiring-locations" type="text" name="location" placeholder="City, Country"/></div>
+
+    <div><label for="hiring-capacity">How many engineers are you hiring in the next 6 months</label></div>
+
+    <div>
+      <select name="numOfEngineers" id="hiring-capacity">
+        <option value="1-2">1-2 Engineers</option>
+        <option value="3-4">3-4 Engineers</option>
+      </select>
+    </div>
+    <div><label for="submit-button"><input id="submit-button" type="submit" name="SubmitForm"/></label></div>
+  </form>
+
 </body>
 </html>
