--- a/css-two-column-layout/index.html
+++ b/css-two-column-layout/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <h1 class>scale, speed, agility</h1>
-    <p> We've dedicated thousands of man hours to making healthcare institutions in the Helium
+    <p> We've dedicated thousands of man hours to making healthcare institutions in the Helium<br>
       network run 10x more efficiently and deliver an unparalleled quality of care.</p>
   </header>
 
