--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +10,107 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
 
+<body>
+  <div class="container">
+
+    <div class="row">
+      <h1><img src="images/logo-blue.svg" alt="logo-blue"></h1>
+
+      <nav class="light-grey-text">
+        <span><a href="/product/">Product</a></span>
+        <span><a href="/implementation/">Implementation </a></span>
+        <span><a href="/about/">About Us</a></span>
+        <span><a href="/blog/">Blog</a></span>
+        <span></span> <button>Contact Us</button></span>
+      </nav>
+    </div>
+
+    <div class="row white-text">
+      <div class="row bg-img align-center">
+        <div class="column">
+          <h2 class="duo white-text">The EMR Reimagined for Primary Care</h2>
+          <p class="duo white-text">Can't remember the last time you talked with a patient without focusing on the EMR?
+            Canvas lets
+            you rediscover joy in the work you do. Capture meaningful data, identify gaps in care, and move seamlessly
+            between tasks within the platform. You stay present with patients while your
+            whole care team stavs up-to-speed. Be a better doctor with Canvas. designed for primary care providers with
+            the help of primary care providers.</p>
+          <button>Get Started</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="row bg-gray grey-text center">
+      <div class="row">
+        <div class="column">
+          <h2>Clinicians Prefer Canvas</h2>
+          <p>Physician-owned primary care practices across the country<br>
+            have already made Canvas the fabric of their care</p>
+        </div>
+      </div>
+
+      <div class="row grey-text">
+        <div class="width-third">
+          <p>Cascade Family Practice, Portland OR</p>
+          <p>Temescal Creek Medicine, Oakland CA</p>
+          <p>San Juan Healthcare, Friday Harbor WA</p>
+        </div>
+        <div class="width-third">
+          <p>Ward Medical Clinic, Bonifay FL</p>
+          <p>Caribou Medical, Towanda PA</p>
+          <p>Bay Tree Family Care, Red Bay AL</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row align-center grey-text">
+      <div>
+        <h2>Ready to learn more?</h2>
+        <p>Schedule a private meeting now</p>
+      </div>
+
+      <div><button>Get Started</button></div>
+    </div>
+
+    <div class="row bg-grey white-text">
+      <div class="column">
+        <h2><img src="images/logo-white.png" alt="logo-white"></h2>
+        <address class="white-text">2307 Irving Street, Suite 228
+          San Francisco CA 94122<br>
+          (800) 370-1416<br>
+          info@canvasmedical.com
+      </div>
+
+      <div class="column center">
+      </div>
+      <div class="column">
+        <dl class="white-text">
+          <dt>Company</dt>
+          <dd>About Us</dd>
+          <dd>Blog</dd>
+        </dl>
+      </div>
+
+      <div class="column">
+        <dl class="white-text">
+          <dt>Product</dt>
+          <dd>Product </dd>
+          <dd>Implementation</dd>
+          <dd>For Health Plans</dd>
+          <dd>Security</dd>
+        </dl>
+      </div>
+    </div>
+
+    <div class="row grey-text">
+      <div class="column">
+        <a href="/product/">Privacy &amp; Terms</a>
+        <a href="/Contact Us/">Contact Us</a>
+      </div>
+    </div>
+    <!--close container-->
+  </div>
 </body>
+
 </html>
