Completed css-canvas-medical

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -17,12 +17,12 @@
     <div class="row">
       <h1><img src="images/logo-blue.svg" alt="logo-blue"></h1>
 
-      <nav class="light-grey-text">
-        <span><a href="/product/">Product</a></span>
-        <span><a href="/implementation/">Implementation </a></span>
-        <span><a href="/about/">About Us</a></span>
-        <span><a href="/blog/">Blog</a></span>
-        <span></span> <button>Contact Us</button></span>
+      <nav class="grey-text">
+        <a href="https://canvas-medical/product.html">Product</a>
+        <a href="https://canvas-medical/implementation.html">Implementation </a>
+        <a href="https://canvas-medical/about-us.html">About Us</a>
+        <a href="https://canvas-medical/blog.html">Blog</a>
+        <input class="button" type="button" value="Contact Us">
       </nav>
     </div>
 
@@ -36,7 +36,7 @@
             between tasks within the platform. You stay present with patients while your
             whole care team stavs up-to-speed. Be a better doctor with Canvas. designed for primary care providers with
             the help of primary care providers.</p>
-          <button>Get Started</button>
+          <input class="button" type="button" value="Get Started">
         </div>
       </div>
     </div>
@@ -70,7 +70,7 @@
         <p>Schedule a private meeting now</p>
       </div>
 
-      <div><button>Get Started</button></div>
+      <div><input class="button" type="button" value="Get Started"></div>
     </div>
 
     <div class="row bg-grey white-text">
@@ -109,7 +109,6 @@
         <a href="/Contact Us/">Contact Us</a>
       </div>
     </div>
-    <!--close container-->
   </div>
 </body>
 
