completed css-canvas-medical

--- a/css-canvas-medical/index.html
+++ b/css-canvas-medical/index.html
@@ -13,50 +13,50 @@
 
 <body>
   <div class="container">
-
-    <div class="row">
-      <h1><img src="images/logo-blue.svg" alt="logo-blue"></h1>
-
-      <nav class="grey-text">
-        <a href="https://canvas-medical/product.html">Product</a>
-        <a href="https://canvas-medical/implementation.html">Implementation </a>
-        <a href="https://canvas-medical/about-us.html">About Us</a>
-        <a href="https://canvas-medical/blog.html">Blog</a>
-        <input class="button" type="button" value="Contact Us">
+    <div class="row white-text">
+      <div class="column">
+        <span class="logo-container"><img src="images/logo-blue.svg" alt="logo-blue"></span>
+      </div>
+      <nav>
+        <a href="/product.html">Product</a>
+        <a href="/implementation.html">Implementation </a>
+        <a href="/about-us.html">About Us</a>
+        <a href="/blog.html">Blog</a>
+        <span> <input class="button" type="button" value="Contact Us"></span>
       </nav>
     </div>
 
-    <div class="row white-text">
-      <div class="row bg-img align-center">
-        <div class="column">
-          <h2 class="duo white-text">The EMR Reimagined for Primary Care</h2>
-          <p class="duo white-text">Can't remember the last time you talked with a patient without focusing on the EMR?
+    <div class="row white-text align-left">
+      <div class="row img-container bg-img white-text">
+        <div class="col-2">
+          <h1>The EMR Reimagined for Primary Care</h1>
+          <p>Can't remember the last time you talked with a patient without focusing on the EMR?
             Canvas lets
             you rediscover joy in the work you do. Capture meaningful data, identify gaps in care, and move seamlessly
             between tasks within the platform. You stay present with patients while your
-            whole care team stavs up-to-speed. Be a better doctor with Canvas. designed for primary care providers with
-            the help of primary care providers.</p>
-          <input class="button" type="button" value="Get Started">
+            whole care team stavs up-to-speed. Be a better doctor with Canvas. designed for primary care providers
+            with the help of primary care providers.<br><span><input class="button" type="button"
+                value="Get Started"></span></p>
         </div>
       </div>
     </div>
 
-    <div class="row bg-gray grey-text center">
-      <div class="row">
+    <div class="row center align-center text-center bg-gray">
+      <div class="row center">
         <div class="column">
-          <h2>Clinicians Prefer Canvas</h2>
-          <p>Physician-owned primary care practices across the country<br>
+          <h2>Clinicians Prefer Canvas</h2><br>
+          <p class="fs-1">Physician-owned primary care practices across the country<br>
             have already made Canvas the fabric of their care</p>
         </div>
       </div>
-
-      <div class="row grey-text">
-        <div class="width-third">
+      <div class="row center stretch">
+        <div class="column stretch">
           <p>Cascade Family Practice, Portland OR</p>
           <p>Temescal Creek Medicine, Oakland CA</p>
           <p>San Juan Healthcare, Friday Harbor WA</p>
         </div>
-        <div class="width-third">
+
+        <div class="column stretch">
           <p>Ward Medical Clinic, Bonifay FL</p>
           <p>Caribou Medical, Towanda PA</p>
           <p>Bay Tree Family Care, Red Bay AL</p>
@@ -64,36 +64,39 @@
       </div>
     </div>
 
-    <div class="row align-center grey-text">
-      <div>
+
+    <div class="row grey-text">
+      <div class="column">
         <h2>Ready to learn more?</h2>
         <p>Schedule a private meeting now</p>
       </div>
 
-      <div><input class="button" type="button" value="Get Started"></div>
+      <span><input class="button right" type="button" value="Get Started"></span>
     </div>
 
-    <div class="row bg-grey white-text">
+    <div class="row bg-grey white-text align-left margin-top-bottom">
       <div class="column">
         <h2><img src="images/logo-white.png" alt="logo-white"></h2>
-        <address class="white-text">2307 Irving Street, Suite 228
+        <address class="white-text">2307 Irving Street, Suite 228<br>
           San Francisco CA 94122<br>
           (800) 370-1416<br>
           info@canvasmedical.com
       </div>
 
-      <div class="column center">
-      </div>
+      <div class="column hidden"></div>
+
       <div class="column">
-        <dl class="white-text">
-          <dt>Company</dt>
+        <dl>
+          <dt class="pl-20">Company</dt>
           <dd>About Us</dd>
           <dd>Blog</dd>
         </dl>
       </div>
+      <br>
+
 
       <div class="column">
-        <dl class="white-text">
+        <dl>
           <dt>Product</dt>
           <dd>Product </dd>
           <dd>Implementation</dd>
@@ -101,14 +104,15 @@
           <dd>Security</dd>
         </dl>
       </div>
+
+
     </div>
 
-    <div class="row grey-text">
-      <div class="column">
-        <a href="/product/">Privacy &amp; Terms</a>
-        <a href="/Contact Us/">Contact Us</a>
-      </div>
-    </div>
+  </div>
+  <footer>
+    <a href="/product/">Privacy &amp; Terms</a>
+    <a href="/Contact Us/">Contact Us</a>
+  </footer>
   </div>
 </body>
 
