--- a/javascript-light-bulb/index.html
+++ b/javascript-light-bulb/index.html
@@ -7,13 +7,8 @@
 </head>
 
 <body>
-  <div class="container-1">
-    <div class="box-1">
-    </div>
-  </div>
-
-  <div class="container-2">
-    <div class="box-2">
+  <div class="container">
+    <div class="box">
     </div>
   </div>
 
